--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendance Calculator</title>
     <style>
         body {
@@ -14,6 +15,7 @@
             align-items: center;
             min-height: 100vh;
             padding: 40px 20px;
+            box-sizing: border-box;
         }
         h2 {
             margin-bottom: 20px;
@@ -122,6 +124,36 @@
             font-family: 'Poppins', sans-serif;
             opacity: 0.8;
         }
+
+        /* Media Query for smaller screens */
+        @media (max-width: 600px) {
+            .container {
+                width: 90%;
+                padding: 15px;
+            }
+
+            h2 {
+                font-size: 1.8em;
+            }
+
+            input, button {
+                font-size: 1rem;
+                padding: 10px;
+            }
+
+            .side-by-side input {
+                font-size: 1.1rem;
+                padding: 12px;
+            }
+
+            #result {
+                font-size: 1.2rem;
+            }
+
+            .total-absent-group input {
+                width: 100px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -216,13 +248,13 @@
             let resultText = `Current Attendance: ${currentAttendance.toFixed(2)}%`;
 
             if (currentAttendance >= 90) {
-                resultText += "<br>Days to attend to maintain 90% attendance: NA";
+                resultText += "<br>ENJOY MAN";
             } else {
                 const requiredLectures = (effectiveAbsent * 100) / (100 - 90);
                 const lecturesToAdd = requiredLectures - totalLecture;
                 const daysNeeded = Math.ceil(lecturesToAdd / 8);
 
-                resultText += `<br>Days to attend to maintain 90% attendance: ${daysNeeded} day${daysNeeded > 1 ? 's' : ''}`;
+                resultText += `<br>Days needed to maintain 90%: ${daysNeeded} day${daysNeeded > 1 ? 's' : ''}`;
             }
 
             document.getElementById('result').innerHTML = resultText;
