--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
 <body>
     <div class="app-container">
         <div class="tab-header">
-            <button class="tab-button active" onclick="openTab(event, 'bunk-calculator')">Bunk Calculator</button>
-            <button class="tab-button" onclick="openTab(event, 'days-calculator')">Days Calculator</button>
+            <button class="tab-button active" onclick="openTab(event, 'ATTENDENCE')">ATTENDENCE</button>
+            <button class="tab-button" onclick="openTab(event, 'BUNK')">BUNK</button>
         </div>
         
         <div class="tab-content-container">
-            <div id="bunk-calculator" class="tab-content active">
+            <div id="ATTENDENCE" class="tab-content active">
                 <iframe src="index_original.html" title="Bunk Calculator"></iframe>
             </div>
             
-            <div id="days-calculator" class="tab-content">
+            <div id="BUNK" class="tab-content">
                 <iframe src="retry1.html" title="Days Calculator"></iframe>
             </div>
         </div>
