--- a/index_original.html
+++ b/index_original.html
@@ -244,7 +244,7 @@
       const effectiveAbsent = totalAbsent - totalOAA;
       const currentAttendance = 100 - ((effectiveAbsent / totalLecture) * 100);
 
-      let resultText = `Current Attendance: ${currentAttendance.toFixed(2)}%`;
+      let resultText = `Attendance: ${currentAttendance.toFixed(2)}%`;
 
       // 90% Check
       if (currentAttendance >= 90) {
