--- a/retry1.html
+++ b/retry1.html
@@ -194,6 +194,12 @@
                 gap: 0;
             }
         }
+        document.addEventListener('contextmenu', event => event.preventDefault());
+document.onkeydown = function(e) {
+if (e.key === "F12" || (e.ctrlKey && e.shiftKey && e.key === "I")) {
+return false;
+}
+};
     </style>
 </head>
 <body>
